alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -36,9 +36,6 @@ a.dropdown-toggle {
     display: inline-block;
     margin-right: 20px;
  }
-.top-bar-right li a{
-    line-height: 
-};
 span.profile-icon {
     max-width: 30px;
     height: auto;
